[build-system]
requires = ["setuptools", "setuptools-scm", "pytest"]
build-backend = "setuptools.build_meta"

[project]
name = "Chat"
description = "Chat package"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
include = ["chat*"]
namespaces = true

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }